k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bandung-coffeeshop-be
  labels:
    app: bandung-coffeeshop-be
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: bandung-coffeeshop-be
  template:
    metadata:
      labels:
        app: bandung-coffeeshop-be
    spec:
      containers:
        - name: bandung-coffeeshop-be
          image: dta32/bandung-coffeeshop-be:v1.1.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7005
          readinessProbe:
            httpGet:
              path: /health
              port: 7005
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 7005
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
